--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,9 @@
         <activity
             android:name=".ChatActivity"
             android:exported="false"/>
+        <activity
+            android:name=".ProfileActivity"
+            android:exported="false"/>
     </application>
 
 </manifest>
