Added main menu shelf, daily quote, a button to generate daily quote (through api), one extra button to chat

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,8 @@
         <activity
             android:name=".ProfileActivity"
             android:exported="false"/>
+        <activity
+            android:name=".BookDetailActivity" />
     </application>
 
 </manifest>
