add chat history activity and ui

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,6 +55,12 @@
         <!-- Book Detail Activity -->
         <activity
             android:name=".BookDetailActivity" />
+
+        <activity
+            android:name=".ChatHistoryActivity"
+            android:theme="@style/Theme.MindHaven" />
+
+
     </application>
 
 </manifest>
